--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -1436,7 +1436,7 @@ h3.head {
 		margin: 0 auto;
 	}
 	.w3layouts_logo a h1 {
-		background: url(../images/1.jpg) no-repeat 75px 5px;
+		background: url(../images/1.png) no-repeat 75px 5px;
 		background-size: 46%;
 	}
 	.w3_search {
